src/objects/Registration_Template__c.object
<CustomObject>
    <fields>
        <fullName>Header_Image_URL__c</fullName>
        <label>Header Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Styles__c</fullName>
        <label>Styles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Image_URL__c</fullName>
        <label>Template Image URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>BLN Registration Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Template_Image_URL__c</columns>
        <columns>Header_Image_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Registration Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Registration Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>